GET checkpoint now returns CreatedAt. (#52)
* GET checkpoint now returns CreatedAt.

Fixes #51


* CreatedAt is now createdAt in protobuf
